update personal homepage

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 					<h2>Publications</h2>
 
 					<a href="#">Domain Transfer Through Deep Activation Matching</a><br>
-					<b>Haoshuo Huang</b> , Qixing Huang, Philipp Krahenbuhl<br>
-                    CVPR, 2018 submitted<br>
+					<b>Haoshuo Huang</b> , Qixing Huang, Philipp Kr&auml;henb&uuml;hl<br>
+                    ECCV, 2018<br>
 
 
                     <h2>RESEARCH EXPERIENCE</h2>
 					<b>Department of Computer Science, University of Texas at Austin</b> 
-					<br>Research Intern, mentored by Prof. Philipp Krahenbuhl and Qixing Huang
+					<br>Research Intern, mentored by Prof. Philipp Kr&auml;henb&uuml;hl and Qixing Huang
 					<ul>
 					  <li>Motivated by reducing domain gap through matching multiple intermediate distributions of dierent
 datasets.</li>
@@ -39,7 +39,6 @@ datasets.</li>
 regularization to get robust performance.</li>
 					  <li>Outperformed the state-of-the-art in semantic segmentation (Cityscapes, SYNTHIA, GTA-dataset) and
 digital image classification(MNIST, SVHN, USPS) tasks.</li>
-						<li><b>Submitted to CVPR2018 as First author.</b></li>
 					</ul>
 
 
