--- a/dam.html
+++ b/dam.html
@@ -70,12 +70,14 @@
 									<h2>Code</h2>
 								</header>
 								<p>
-									https://github.com/RsEnts/DAM_release
+									<span style="font-size:23px"><a href="https://github.com/RsEnts/DAM_release">Github</a></span>
 								</p>
 								<header>
 									<h2>Paper</h2>
 								</header>
-								http://www.philkr.net/papers/2018-09-01-eccv/2018-09-01-eccv.pdf
+								<p>
+									<span style="font-size:23px"><a href="http://www.philkr.net/papers/2018-09-01-eccv/2018-09-01-eccv.pdf">ECCV.pdf</a></span>
+								</p>
 
 							</article>
 
