--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				<th>
 					<font size=5>Haoshuo Huang(黄豪硕)</font><br><br>
 					<br>
-					Email: hhs14@mails.tsinghua.edu.cn<br>
+					Email: haosoul122@gmail.com<br>
 					Mobile: (+86) 178-0105-0071
 
 				</th>
@@ -19,8 +19,7 @@
 				<td colspan=2>
 					<br>
                     <h2>About Me</h2>
-					I am an undergraduate student major in computer science in tsinghua university<br>
-					My current research interest lies in interdisciplinary field of computer vision and graphics <br><br>
+					I am a research intern at Google AI China Center<br>
 					
 					<h2>Publications</h2>
 
@@ -30,6 +29,11 @@
 
 
                     <h2>RESEARCH EXPERIENCE</h2>
+                    <b>Google</b>
+                    <br>Research Intern, mentored by Kevin Jing</br>
+                    <ul>
+                    	<li>Built a knowledge graph for education.</li>
+                    </ul>
 					<b>Department of Computer Science, University of Texas at Austin</b> 
 					<br>Research Intern, mentored by Prof. Philipp Kr&auml;henb&uuml;hl and Qixing Huang
 					<ul>
@@ -51,21 +55,6 @@ well-designed Mitosis-classification network.</li>
 					  <li>Took part in the Tumor Proliferation Assessment Challenge 2016, which is a satellite challenge of Medical
 Image Computing and Computer Assisted Intervention(MICCAI).</li>
 						<li>Won rank 2 in task1, rank 1 in task2, rank 5 in task 3.</li>
-					</ul>
-
-					<b>Student Research Training, Tsinghua University</b> 
-					<br>Research Intern, mentored by Mingxing Xu
-					<ul>
-					  <li>Detected advertisement in a video through processing of audio.</li>
-					  <li>Proposed a framework to nd patterns for audio through the use of HASH algorithm.</li>
-					  <li>Implemented a media player to automatically deleted the audio.</li>
-					</ul>
-
-
-					<b>Tsinghua SAIL Group, Tsinghua Univeristy</b> 
-					<br>Research Assistant, co-worked with Hang Su
-					<ul>
-					  <li>Do further research in domain adaptation.</li>
 					</ul>
 					
 
