--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Carnegie Mellon University<br />
 <b><a href="https://github.com/RsEnts">GitHub</a>, <a href="https://www.linkedin.com/in/haoshuo-huang-a6828a107/">Linkedin</a></b></p>
 <h2>Biography</h2>
 
-<p>Haoshuo Huang is a master student at Robotics Institute in School of Computer Science at <b>Carnegie Mellon University</b>. He obtained his Bachelor's degree from Computer Science and Technology Department, Tsinghua University in 2018.</p>
+<p>Haoshuo Huang is a master student at Robotics Institute in School of Computer Science at Carnegie Mellon University. He obtained his Bachelor's degree from Computer Science and Technology Department, Tsinghua University in 2018.</p>
 
 <p>He interned three times at Google (Jun. 2018 - Dec. 2018, Jan. 2019 - Aug. 2019, May 2020 - Aug. 2020), conducted research in multimodal machine learning and explored potential production applications. He published two papers about Vision-and-Language Navigation during the internship along with a technical report about a RL framework. Prior to that, he also spent some time in Microsoft Research Asia working on projects about medical images.</p>
 
@@ -42,7 +42,7 @@ Carnegie Mellon University<br />
 
 <h2>Technical Reports</h2>
 <ul>
-<li><p><a href="https://arxiv.org/abs/1912.03241">VALAN: Vision and Language Agent Navigation</a><br /> <b>L. Lansing</b>, V. Jain, H. Mehta, H. Huang, E. Ie.<br /> <i></i> ICCV' 2020 </p>
+<li><p><a href="https://arxiv.org/abs/1912.03241">VALAN: Vision and Language Agent Navigation</a><br /> L. Lansing, V. Jain, H. Mehta, <b>H. Huang</b>, E. Ie.<br /> <i></i> ICCV' 2020 </p>
 </li>
 </ul>
 
