--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Carnegie Mellon University<br />
 
 <h2>Technical Reports</h2>
 <ul>
-<li><p><a href="https://arxiv.org/abs/1912.03241">VALAN: Vision and Language Agent Navigation</a><br /> L. Lansing, V. Jain, H. Mehta, <b>H. Huang</b>, E. Ie.<br /> <i></i> ICCV' 2020 </p>
+<li><p><a href="https://arxiv.org/abs/1912.03241">VALAN: Vision and Language Agent Navigation</a><br /> L. Lansing, V. Jain, H. Mehta, <b>H. Huang</b>, E. Ie.<br /> <i></i>Arxiv</p>
 </li>
 </ul>
 
