--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Carnegie Mellon University<br />
 
 <p>Haoshuo Huang is a master student at Robotics Institute in School of Computer Science at Carnegie Mellon University. He obtained his Bachelor's degree from Computer Science and Technology Department, Tsinghua University in 2018.</p>
 
-<p>He interned three times at Google (Jun. 2018 - Dec. 2018, Jan. 2019 - Aug. 2019, May 2020 - Aug. 2020), conducted research in multimodal machine learning and explored potential production applications. He published two papers about Vision-and-Language Navigation during the internship along with a technical report about a RL framework. Prior to that, he also spent some time in Microsoft Research Asia working on projects about medical images.</p>
+<p>He interned four times at Google (Jun. 2018 - Dec. 2018, Jan. 2019 - May 2019, May 2019 - Aug. 2019, May 2020 - Aug. 2020), conducted research in multimodal machine learning and explored potential production applications. He published two papers about Vision-and-Language Navigation during the internship along with a technical report about a RL framework. Prior to that, he also spent some time in Microsoft Research Asia working on projects about medical images.</p>
 
 <h2>Publication</h2>
 <ul>
