--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@ National Olympiad in Informatics (NOI), <b>Gold Medalist</b> (Top 50 highschool 
 Python,  C/C++, Java, MATLAB, LaTeX, Lua<br />
 <b>Language Proficiency:</b><br />
 English (full professional proficiency), Mandarin (native)<br />
+
+<h2>Misc</h2>
+<p>During my spare time I enjoy competitive programming (codeforces: <a href="https://codeforces.com/profile/RsEnts"><font face="verdana,arial,sans-serif" color="#FF8C00">RsEnts</font></a>). Feel free to reach out if you are also an algorithm lover :-). </p>
+
 </div>
 </body>
 </html>
