--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 School of Computer Science,<br />
 Carnegie Mellon University<br />
 </p>
-<p><b>Email:</b> haoshuoh [at] cmu.edu <br />
+<p><b>Email:</b> haoshuoh [at] andrew.cmu.edu <br />
 <b><a href="https://github.com/RsEnts">GitHub</a>, <a href="https://www.linkedin.com/in/haoshuo-huang-a6828a107/">Linkedin</a></b></p>
 <h2>Biography</h2>
 
